# vita-header-internal

./: README.md
kernel/kernel/: modulemgr_1.03_1.692.h  modulemgr_1.81.h  modulemgr_2.00.h  modulemgr_2.00_2.06.h  modulemgr_2.10_3.00.h  modulemgr_3.00.h  modulemgr_3.10_3.74.h  processmgr.h
nid/: SceProcessmgrForDriver.txt  SceProcessmgrForKernel.txt  SceSysmemForDriver.txt
nid/kernel/: SceAVConfigForDriver.txt  SceAppMgrForDriver.txt  SceAudioForDriver.txt  SceAudioInForDriver.txt  SceAvcodecForDriver.txt  SceBacktraceForDriver.txt  SceBbmcForDriver.txt  SceBtForDriver.txt  SceBusErrorForKernel.txt  SceCameraForDriver.txt  SceCdramForDriver.txt  SceClockgenForDriver.txt  SceCodecEngineWrapperForDebugger.txt  SceCodecEngineWrapperForDriver.txt  SceCodecForDriver.txt  SceCompatForDriver.txt  SceCompatForVsh.txt  SceCoredumpForDriver.txt  SceCpuForDriver.txt  SceCpuForKernel.txt  SceCsiForDriver.txt  SceCtrlForDriver.txt  SceDbgSdioForDriver.txt  SceDbgUsbForDriver.txt  SceDebugForDriver.txt  SceDebugForKernel.txt  SceDebugLedForDriver.txt  SceDeci2pForDriver.txt  SceDeci4pCpupForDriver.txt  SceDeci4pDbgpForDriver.txt  SceDeci4pDfMgrForDebugger.txt  SceDeci4pSDfMgrForKernel.txt  SceDeci4pSdbgpForKernel.txt  SceDipswForDriver.txt  SceDisplayForDriver.txt  SceDmacmgrForDriver.txt  SceDsiForDriver.txt  SceErrorForDriver.txt  SceExcpmgrForKernel.txt  SceFios2KernelForDriver.txt  (+105 more)
nid/psp2nidcompat/: CMakeLists.txt  nidcompat_add.sh  nidcompat_new.sh
nid/psp2nidcompat/src/: fs_list.c  main.c  nidcompat.c  nidcompat.h  nidcompat_utils.c  x.txt
shared/: types.h
(+426 files in other folders)
